Ver. 1.5.0 - 2021-02-25
---------------------------
- Bugfix - Fix CreatePersonAction bug (#14)
- Feature - Citizen visibility management (migration added, prop Visibility removed) (#10)

Ver. 1.4.9 - 2021-02-19
----------------------------
- Feature - Docker volume mapping for Logs (#11)
- Bugfix - Fix in ConsumerService module (appsettings edited) (#12)

Ver. 1.4.8 - 2021-02-16
----------------------------
- Feature - Update of Social Media Module (#7)


Ver. 1.4.7 - 2021-02-12
----------------------------
- Feature - Abp.AzureCognitiveServices module added (migration, column Tags in Report) (appsettings to be updated) (#2)
- Feature - Bus Producer and Bus Consumer modules added (changes in appsettings.json) (#8)

Ver. 1.4.6 - 2021-02-08
----------------------------
- Bugfix - Fix PersonAction file class name
- Feature - PersonActionSharingPosition now is recorded as a new row (#72)
- Bugfix - Change CurrentStatus prop name in MissionNotificationDto (#71)
- Feature - Add BBox filter for Get APIs (#68)

Ver. 1.4.5 - 2021-01-26 (see https://bitbucket.org/mobilesolutionsismb/faster-backend-aspnetcore/src/master/ for full history)
----------------------------
- Bugfix - Add startDateFilter and endDateFilter in GetFeatureCollection api (#69)

Ver. 1.4.4 - 2021-01-21
----------------------------
- Feature - Bus notification for UpdateReportStatus event added (#67)

Ver. 1.4.3 - 2021-01-21
----------------------------
- Bugfix - Timestamp management in UpdateReport Api
- Bugfix - MimeType update for mp4 and mp3 files

Ver. 1.4.2 - 2021-01-20
----------------------------
- Bugfix - PersonActions full management (#64)
- Feature - Update Report status API added (#65)


Ver. 1.4.1 - 2021-01-15
-----------------------------
- Feature - GetLeafActivity function added (#63)
- Bugfix - Mission update before notification sending (#61)
- Feature - SelectedLocation prop deleted (migration) (#59)

Ver. 1.4.0 - 2021-01-11
-----------------------------