@@ -1,3 +1,7 @@
+Ver.
+---------------------------
+- Feature - Add AdultInfo prop to Report, but NOT in ReportDto (migration added) (#15)
+
 Ver. 1.5.0 - 2021-02-25
 ---------------------------
 - Bugfix - Fix CreatePersonAction bug (#14)
